# GEDI-H3

./: .buildinfo  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REFACTORING_REPORT.md  about.html  constraints-min.txt  environment.yml  gedih3.code-workspace  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  untitled.chat
.claude/: settings.local.json
.claude/agents/: cli-deployment.md  core-pipeline.md  raster-egi.md  testing-qa.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/monitor-ci/: SKILL.md
.doctrees/: about.doctree  index.doctree
.doctrees/__intersphinx_cache__/: dask_objects.inv
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/gedih3/: index.doctree
.doctrees/concepts/: egi-indexing.doctree  gedi-data.doctree  h3-indexing.doctree  index.doctree  variable-presets.doctree
.doctrees/getting-started/: configuration.doctree  index.doctree  installation.doctree  quickstart.doctree
.doctrees/user-guide/: building-a-database.doctree  cli-reference.doctree  data-formats.doctree  index.doctree  python-api.doctree
.github/workflows/: build.yml  ci.yml  claude.yml  docs.yml  lint.yml  release.yml
_modules/: index.html
_modules/gedih3/: cliutils.html  config.html  daac.html  exceptions.html  gedidriver.html  gh3builder.html  gh3driver.html  h3utils.html  imgutils.html  logger.html  logging_config.html  parallel.html  sqlutils.html  utils.html  validation.html  vecutils.html
_modules/gedih3/cli/: gh3_aggregate.html  gh3_build.html  gh3_build_ducklake.html  gh3_doctor.html  gh3_download.html  gh3_extract.html  gh3_from_img.html  gh3_from_polygon.html  gh3_list_resolutions.html  gh3_rasterize.html  gh3_read_schema.html  gh3_update.html
_modules/gedih3/doctor/: fused.html  inspect.html  parallel.html  parquet_ops.html  report.html  runner.html  upstream.html
_modules/gedih3/egi/: config.html  core.html  dataframe.html  raster.html  spatial.html
_modules/gedih3/raster/: config.html  export.html  h3_raster.html  timeseries.html
_sources/: about.md.txt  index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/gedih3/: index.rst.txt
_sources/concepts/: index.md.txt
_sources/getting-started/: configuration.md.txt  index.md.txt  installation.md.txt
_sources/user-guide/: building-a-database.md.txt  cli-reference.md.txt
_static/: custom.css  documentation_options.js
autoapi/: index.html
autoapi/gedih3/: index.html
autoapi/gedih3/cli/: index.html
autoapi/gedih3/cliutils/: index.html
autoapi/gedih3/config/: index.html
autoapi/gedih3/daac/: index.html
autoapi/gedih3/doctor/: index.html
autoapi/gedih3/egi/: index.html
autoapi/gedih3/exceptions/: index.html
autoapi/gedih3/gedidriver/: index.html
autoapi/gedih3/gh3builder/: index.html
autoapi/gedih3/gh3driver/: index.html
autoapi/gedih3/h3utils/: index.html
autoapi/gedih3/imgutils/: index.html
autoapi/gedih3/logger/: index.html
autoapi/gedih3/logging_config/: index.html
autoapi/gedih3/parallel/: index.html
autoapi/gedih3/raster/: index.html
autoapi/gedih3/sqlutils/: index.html
autoapi/gedih3/utils/: index.html
autoapi/gedih3/validation/: index.html
autoapi/gedih3/vecutils/: index.html
concepts/: egi-indexing.html  gedi-data.html  h3-indexing.html  index.html  variable-presets.html
docker/: .dockerignore  Dockerfile  README.md
docs/: about.md  cli-reference.md  conf.py  data-formats.md  index.md
docs/_static/: custom.css
docs/concepts/: egi-indexing.md  gedi-data.md  h3-indexing.md  index.md  variable-presets.md
docs/getting-started/: configuration.md  docker.md  index.md  installation.md  quickstart.md
docs/reference/: building-a-database.md  index.md
docs/user-guide/: building-a-database.md  cli-reference.md  data-formats.md  index.md  python-api.md
getting-started/: configuration.html  index.html  installation.html  quickstart.html
recipe/: README.md  meta.yaml
scripts/: dask_worker_trim.py  generate_illustrations.py  gh3_resume_recovery.py
src/gedih3/: __init__.py  cliutils.py  config.py  daac.py  exceptions.py  gedidriver.py  gh3builder.py  gh3driver.py  h3utils.py  imgutils.py  logger.py  logging_config.py  parallel.py  sqlutils.py  utils.py  validation.py  vecutils.py
src/gedih3/cli/: __init__.py  gh3_aggregate.py  gh3_build.py  gh3_build_ducklake.py  gh3_doctor.py  gh3_download.py  gh3_extract.py  gh3_from_img.py  gh3_from_polygon.py  gh3_list_resolutions.py  gh3_list_variables.py  gh3_rasterize.py  gh3_read_schema.py  gh3_update.py
src/gedih3/data/: GEDI01_B_DATASETS_002.txt  GEDI01_B_DATASETS_003.txt  GEDI02_A_DATASETS_002.txt  GEDI02_A_DATASETS_003.txt  GEDI02_B_DATASETS_002.txt  (+7 more)
tasks/: lessons.md
tests/: TESTING.md  conftest.py  gh3_build_log_template.json  gh3_merge.py  run_tests.py  test_build_safety.py  test_build_vrt.py  test_cli_help_ascii.py  test_cli_pipeline.py  test_cliutils.py  test_daac_callback.py  test_daac_timeouts.py  test_data_integrity.py  test_dependencies.py  test_doctor_diagnoses.py  test_doctor_fused.py  test_doctor_parallel.py  test_doctor_parquet_ops.py  test_doctor_runner.py  test_doctor_tmp_partitions_health.py  test_egi_comprehensive.py  test_egi_core.py  test_egi_load_meta.py  test_egi_raster_pixel_size.py  test_egi_raster_tile_guard.py  test_exceptions.py  test_failure_telemetry.py  test_gh3_build_vars_check.py  test_gh3_select_partitions.py  test_gh3_update_egi_keys.py  test_gh3_update_filter_fallback.py  test_h3_load_meta.py  test_h3_roi_ring_expansion.py  test_imgutils.py  test_logger_compat.py  test_logger_h3_levels_guard.py  test_logger_resume_skip.py  test_merge_build_logs.py  test_merge_resume.py  test_parallel.py  (+13 more)
tutorials/: tutorial_cli_pipeline.sh  tutorial_duckdb_basics.ipynb  tutorial_python_api_pipeline.py
tutorials/cesium_animation/: .gitignore  convert_to_geojson.py  generate_data.sh  index.html  prepare_data.py
user-guide/: building-a-database.html  cli-reference.html  data-formats.html  index.html  python-api.html
(+188 files in other folders)
