[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gedih3"
version = "0.0.1"
description = "Functions to download and process GEDI files"
readme = "README.md"
authors = [
    {name = "Tiago de Conto", email = "tiagodc@umd.edu"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy >= 2.2.6",
    "pandas >= 2.3.2",
    "geopandas >= 1.1.1",
    "shapely >= 2.0.0",
    "fiona >= 1.10.0",
    "pyproj",
    "h3 >= 4.3.0",
    "h3pandas >= 0.3.0",
    "antimeridian",
    "dask >= 2025.5.1",
    "dask-geopandas >= 0.5.0",
    "distributed",
    "numba",
    "pyarrow >= 20.0.0",
    "h5py >= 3.14.0",
    "xarray >= 2025.7.1",
    "rioxarray >= 0.19.0",
    "geocube >= 0.7.1",
    "python-dateutil >= 2.9.0",
    "python-dotenv",
    "earthaccess >= 0.14.0",
    "pqdm",
    "pyyaml",
    "tenacity >= 8.2.0",
    "scipy >= 1.11.0",
    "GDAL",
]

[project.scripts]
gh3_build = "gedih3.cli.gh3_build:main"
gh3_download = "gedih3.cli.gh3_download:main"
gh3_extract = "gedih3.cli.gh3_extract:main"
gh3_aggregate = "gedih3.cli.gh3_aggregate:main"
gh3_list_variables = "gedih3.cli.gh3_list_variables:main"
gh3_list_resolutions = "gedih3.cli.gh3_list_resolutions:main"
gh3_read_schema = "gedih3.cli.gh3_read_schema:main"
gh3_rasterize = "gedih3.cli.gh3_rasterize:main"
gh3_update = "gedih3.cli.gh3_update:main"
gh3_from_img = "gedih3.cli.gh3_from_img:main"
gh3_from_polygon = "gedih3.cli.gh3_from_polygon:main"

[tool.setuptools]
packages = ["gedih3", "gedih3.cli", "gedih3.egi", "gedih3.raster"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
gedih3 = ["data/*.txt", "data/*.json", "data/*.parquet"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require external resources)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
testpaths = ["tests"]