[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gedih3"
version = "0.8.15"
description = "Access, index, and analyze NASA GEDI LiDAR data with H3 hexagonal spatial indexing and Dask-distributed processing"
readme = "README.md"
authors = [
    {name = "Tiago de Conto", email = "tiagodc@umd.edu"}
]
license = "LicenseRef-UMD-Source-Available-NonCommercial-1.0"
requires-python = ">=3.12"
keywords = [
    "gedi", "lidar", "h3", "spatial-indexing", "remote-sensing",
    "nasa", "biomass", "forestry", "dask", "geospatial", "parquet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.24.0",
    "pandas >= 2.0.0",
    "geopandas >= 0.14.0",
    "shapely >= 2.0.0",
    "fiona >= 1.10.0",
    "pyproj >= 3.6.0",
    "h3 >= 4.3.0",
    "h3pandas >= 0.3.0",
    "antimeridian >= 0.3.0",
    "fsspec >= 2023.1.0",
    "dask >= 2024.1.0",
    "dask-geopandas >= 0.5.0",
    "distributed >= 2024.1.0",
    "numba >= 0.58.0",
    "pyarrow >= 14.0.0",
    "h5py >= 3.8.0",
    "xarray >= 2024.1.0",
    "rioxarray >= 0.15.0",
    "geocube >= 0.7.1",
    "python-dateutil >= 2.9.0",
    "python-dotenv >= 1.0.0",
    "earthaccess >= 0.16.0",
    "pqdm >= 0.2.0",
    "pyyaml >= 6.0",
    "scipy >= 1.10.0",
    "duckdb >= 0.9.0",
]

[project.urls]
Homepage = "https://github.com/tiagodc/GEDI-H3"
Repository = "https://github.com/tiagodc/GEDI-H3"
Documentation = "https://tiagodc.github.io/GEDI-H3/"
Issues = "https://github.com/tiagodc/GEDI-H3/issues"

[project.scripts]
gh3_build = "gedih3.cli.gh3_build:main"
gh3_download = "gedih3.cli.gh3_download:main"
gh3_extract = "gedih3.cli.gh3_extract:main"
gh3_aggregate = "gedih3.cli.gh3_aggregate:main"
gh3_list_resolutions = "gedih3.cli.gh3_list_resolutions:main"
gh3_read_schema = "gedih3.cli.gh3_read_schema:main"
gh3_rasterize = "gedih3.cli.gh3_rasterize:main"
gh3_update = "gedih3.cli.gh3_update:main"
gh3_from_img = "gedih3.cli.gh3_from_img:main"
gh3_from_polygon = "gedih3.cli.gh3_from_polygon:main"
gh3_build_ducklake = "gedih3.cli.gh3_build_ducklake:main"
gh3_doctor = "gedih3.cli.gh3_doctor:main"

[project.optional-dependencies]
docs = [
    "sphinx >= 8.0",
    "pydata-sphinx-theme >= 0.16",
    "numpydoc >= 1.8",
    "myst-parser >= 4.0",
    "sphinx-autoapi >= 3.4",
    "sphinx-design >= 0.6",
    "sphinxcontrib-mermaid >= 1.0",
]
gdal = [
    "GDAL >= 3.4.0",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["gedih3", "gedih3.cli", "gedih3.data", "gedih3.egi", "gedih3.raster"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
gedih3 = ["data/*.txt", "data/*.json", "data/*.parquet", "data/*.yaml", "data/*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["docs/", "tutorials/", "tstex_modules/", "tests/tests.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "I001", "W291", "W292", "W293", "F401", "F541", "F841", "E401", "F811", "E712", "E722", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/test_egi_comprehensive.py" = ["E402"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require external resources)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
testpaths = ["tests"]