[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gedih3"
version = "0.14.0"
description = "Access, index, and analyze NASA GEDI LiDAR data with H3 hexagonal spatial indexing and Dask-distributed processing"
readme = "README.md"
authors = [
    {name = "Tiago de Conto", email = "tiagodc@umd.edu"},
    {name = "Amelia Grace Holcomb", email = "ameliah@umd.edu"}
]
license = "LicenseRef-UMD-Source-Available-NonCommercial-1.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
keywords = [
    "gedi", "lidar", "h3", "spatial-indexing", "remote-sensing",
    "nasa", "biomass", "forestry", "dask", "geospatial", "parquet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
# Every module imported by name in src/ is declared here, even where another
# dependency happens to pull it in today (rasterio via rioxarray, tqdm via
# pqdm, psutil via distributed, ...). Relying on a transitive edge means an
# upstream dependency drop silently breaks an import at runtime.
# All of these ship self-contained binary wheels — the native libraries
# (GDAL, GEOS, PROJ, HDF5) are vendored inside them, so no system packages
# are required. See docs/getting-started/installation.md.
#
# Lower bounds are installable and tested, not aspirational: the ci.yml
# minimum-versions job pins every one of them with == and runs the suite.
# Most are set by the first release supporting the requires-python floor of
# 3.12; the rest are noted inline. Do not lower one without re-running that
# job — several of these floors were fiction until they were checked.
dependencies = [
    "numpy >= 1.26.0",   # first release with CPython 3.12 wheels
    "pandas >= 2.1.1",   # first release with CPython 3.12 wheels
    "geopandas >= 1.0.0",  # >=1.0 for the pyogrio default IO engine (fiona is no longer a dependency)
    "shapely >= 2.0.2",  # first release with CPython 3.12 wheels
    "pyogrio >= 0.7.2",  # geopandas' OGR backend; replaces fiona (no linux-aarch64 / cp314 wheels)
    "pyproj >= 3.6.1",  # first release with CPython 3.12 wheels
    "h3 >= 4.3.0",
    "h3pandas >= 0.3.0",
    "antimeridian >= 0.3.0",
    "fsspec >= 2025.2.0",  # earthaccess >=0.16 requires fsspec/s3fs >=2025.2
    "s3fs >= 2025.2.0",  # fsspec 's3://' backend; floor from earthaccess — S3 ETL mode and remote databases
    "aiohttp >= 3.9.0",  # fsspec 'http(s)://' protocol backend — remote databases
    "requests >= 2.26.0",
    "dask >= 2025.1.0",  # dask-geopandas >=0.5 requires dask >=2025.1
    "dask-geopandas >= 0.5.0",
    "distributed >= 2025.1.0",  # tracks the dask floor
    "psutil >= 5.9.4",  # first release with CPython 3.12 wheels
    "numba >= 0.59.0",  # first release with CPython 3.12 wheels
    "pyarrow >= 14.0.1",  # dask[dataframe] >=2025.1 requires pyarrow >=14.0.1
    "h5py >= 3.10.0",  # first release with CPython 3.12 wheels
    "xarray >= 2024.1.0",
    "rasterio >= 1.3.8.post1",  # first release with CPython 3.12 wheels
    "rioxarray >= 0.15.0",
    "geocube >= 0.7.1",
    "affine >= 2.3.0",
    "python-dateutil >= 2.9.0",
    "python-dotenv >= 1.0.0",
    "earthaccess >= 0.16.0",
    "pqdm >= 0.2.0",
    "tqdm >= 4.60.0",
    "pyyaml >= 6.0.1",  # first release with CPython 3.12 wheels
    "scipy >= 1.11.2",  # first release with CPython 3.12 wheels
    "duckdb >=1.4.4,<1.5",  # pin to 1.4.x LTS: DuckLake catalog format v0.3 is version-locked; 1.5+ writes v0.4 which 1.4 cannot read
]

[project.urls]
Homepage = "https://github.com/tiagodc/GEDI-H3"
Repository = "https://github.com/tiagodc/GEDI-H3"
Documentation = "https://tiagodc.github.io/GEDI-H3/"
Issues = "https://github.com/tiagodc/GEDI-H3/issues"

[project.scripts]
gh3_build = "gedih3.cli.gh3_build:main"
gh3_download = "gedih3.cli.gh3_download:main"
gh3_extract = "gedih3.cli.gh3_extract:main"
gh3_aggregate = "gedih3.cli.gh3_aggregate:main"
gh3_list_resolutions = "gedih3.cli.gh3_list_resolutions:main"
gh3_read_schema = "gedih3.cli.gh3_read_schema:main"
gh3_rasterize = "gedih3.cli.gh3_rasterize:main"
gh3_update = "gedih3.cli.gh3_update:main"
gh3_from_img = "gedih3.cli.gh3_from_img:main"
gh3_from_polygon = "gedih3.cli.gh3_from_polygon:main"
gh3_build_ducklake = "gedih3.cli.gh3_build_ducklake:main"
gh3_doctor = "gedih3.cli.gh3_doctor:main"

[project.optional-dependencies]
docs = [
    "sphinx >= 8.0",
    "pydata-sphinx-theme >= 0.16",
    "numpydoc >= 1.8",
    "myst-parser >= 4.0",
    "sphinx-autoapi >= 3.4",
    "sphinx-design >= 0.6",
    "sphinxcontrib-mermaid >= 1.0",
]
# NOT pip-installable as written, and deliberately left that way.
#
# PyPI's GDAL has no wheels at all — only an sdist, which refuses to build
# unless a system libgdal of the *exact same version* is already present. So
# `pip install gedih3[gdal]` fails even on hosts that do have libgdal, because
# the resolver picks the newest GDAL rather than the one installed. There is
# no version specifier that works generically; the only correct invocation is
#
#     pip install "GDAL==$(gdal-config --version)"
#
# after installing libgdal-dev (see .github/workflows/ci.yml).
#
# Nothing in gedih3 requires it: the sole consumer, raster.build_vrt, falls
# back to a rasterio-only VRT writer when the bindings are absent. Conda users
# get the bindings from `gdal` in environment.yml. This extra exists only to
# name the optional capability.
gdal = [
    "GDAL >= 3.4.0",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = [
    "gedih3",
    "gedih3.cli",
    "gedih3.data",
    "gedih3.doctor",
    "gedih3.doctor.diagnoses",
    "gedih3.egi",
    "gedih3.raster",
]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
gedih3 = ["data/*.txt", "data/*.json", "data/*.parquet", "data/*.yaml", "data/*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["docs/", "tutorials/", "tstex_modules/", "tests/tests.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "I001", "W291", "W292", "W293", "F401", "F541", "F841", "E401", "F811", "E712", "E722", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/test_egi_comprehensive.py" = ["E402"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require external resources)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
testpaths = ["tests"]