[metadata]
name = gedih3
version = 0.0.1
author = Tiago de Conto
author_email = tiagodc@umd.edu
description = Functions to download and process GEDI files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.13
install_requires = 
    numpy >= 2.2.6
    pandas >= 2.3.2
    geopandas >= 1.1.1
    h3 >= 4.3.0
    h3pandas >= 0.3.0
    dask >= 2025.5.1
    dask_geopandas >= 0.5.0
    pyarrow >= 20.0.0
    h5py >= 3.14.0
    xarray >= 2025.7.1
    rioxarray >= 0.19.0
    geocube >= 0.7.1
    python-dateutil >= 2.9.0
    earthaccess >= 0.14.0
include_package_data = True
package_data =
    gedih3 = *.env, *.json, *.parquet, data/*.json, data/*.parquet, config/*.env
scripts = 
    bin/gh3_list_variables
    bin/gh3_list_resolutions
    bin/gh3_list_iso3
    bin/gh3_extract_shots
    bin/gh3_extract_waveforms
    bin/gh3_read_schema
    bin/gh3_aggregate
    bin/gh3_from_img
    bin/gh3_from_polygons
    bin/gh3_update

[options.packages.find]
where = src